tests/error/library_errors/non_generic_struct_generic_method.err
Error: Invalid entry point (at $FILE:10:4)
   | 
 8 | class MyStruct:
 9 |     @guppy
10 |     def method(self, x: T @ comptime) -> array[T, 3]:
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
11 |         return array(x for _ in range(3))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Function `method` is not a valid compilation entry point
   |                                           since the value of generic parameter `x: T` is not known

Guppy compilation failed due to 1 previous error
